syntax = "proto3";

package arquisoft.remote;

option csharp_namespace = "Arquisoft.Remote";

message Product {
  int32 id = 1;
  string supplier = 2;

  string name = 10;
  string category = 20;
  optional string vendor = 30;
  optional string image = 48;
  int32 amount = 49;
  double price = 60;
}

message NoneType {
  /* Has no fields */
}

message Int32Type {
  int32 value = 1;
}

message StringType {
  string value = 1;
}

message BooleanType {
  bool value = 1;
}

message ProductsResponse {
  repeated Product products = 1;
}

message ProductRequest {
  int32 id = 1;
  string supplier = 2;
}

service ProductService {
  rpc GetProductById(Int32Type) returns (Product);
  rpc GetProductByName(StringType) returns (Product);
  rpc GetProductsByCategory(StringType) returns (ProductsResponse);
  rpc GetProductsByVendor(StringType) returns (ProductsResponse);
  rpc GetAllProducts(NoneType) returns (ProductsResponse);
  rpc BuyProduct(ProductRequest) returns (BooleanType);
}
